--- a/.github/workflows/interop.yml
+++ b/.github/workflows/interop.yml
@@ -1,7 +1,5 @@
 name: interop
-on:
-  schedule:
-  - cron: "0 */8 * * *" # every 8h
+on: push
 
 # Cache key for caching the Wireshark build.
 # To trigger a rebuild of Wireshark increment this value.
@@ -153,6 +151,7 @@ jobs:
         client: ${{ fromJson(needs.config.outputs.clients) }}
     name: (${{ matrix.server }} - ${{ matrix.client }})
     steps:
+      - run: df && df -H
       - uses: actions/checkout@v2
       - uses: actions/setup-python@v1
         with:
@@ -195,6 +194,7 @@ jobs:
         run: |
           pip install -U pip
           pip install -r requirements.txt
+      - run: df && df -H
       - name: Run tests
         env:
           CRON: "true"
